refactor: format code and abstract functionality