@@ -18,7 +18,6 @@ import tech.afgalvan.products.integration.utils.HttpUtils;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -27,27 +26,21 @@ import static org.junit.jupiter.api.Assertions.*;
 @MicronautTest
 class ProductsTest {
     private static final String[] products = {"shampoo", "pencil", "soap", "paper"};
-    private static boolean isAlreadyFilled;
     @Inject
     @Client("/api")
     HttpClient client;
     @Inject
     ObjectMapper mapper;
 
-    private static void postProduct(String productName) {
-        HttpUtils.POST("/products", productOf(productName));
-    }
-
-    private static void fillApi() {
-        if (isAlreadyFilled) {
-            return;
-        }
-        Stream.of(products).forEach(ProductsTest::postProduct);
-        isAlreadyFilled = true;
-    }
-
     private static CreateProductRequest productOf(String name) {
         return new CreateProductRequest(name, "https://github.com", 0, "lit", 10);
+    }
+
+    public Stream<ProductResponse> getAllProducts() {
+        @SuppressWarnings("unchecked")
+        Class<List<ProductResponse>> cls = (Class<List<ProductResponse>>) (Object) List.class;
+        return HttpUtils.GET("/products", ProductResponse.class, cls)
+                .stream();
     }
 
     public static Stream<Arguments> generateRequests() {
@@ -65,7 +58,6 @@ class ProductsTest {
     @MethodSource("generateRequests")
     @Order(1)
     void whenISendAPOSTRequestToTheProductsEndpoint_thenTheProductShouldBeSaved(CreateProductRequest request) {
-        isAlreadyFilled = true;
         HttpResponse<ProductResponse> response = HttpUtils.POST("/products", request, ProductResponse.class);
         assertEquals(HttpStatus.CREATED, response.getStatus());
         assertNotNull(response.body());
@@ -74,12 +66,9 @@ class ProductsTest {
     @Test
     @Order(2)
     void whenISendAGETRequestToTheProductsEndpoint_thenAllRegisteredProductsShouldBeRetrieved() {
-        @SuppressWarnings("unchecked")
-        Class<List<ProductResponse>> cls = (Class<List<ProductResponse>>) (Object) List.class;
-        List<String> response = HttpUtils.GET("/products", ProductResponse.class, cls)
-                .stream()
+        List<String> response = getAllProducts()
                 .map(ProductResponse::getName)
-                .collect(Collectors.toList());
+                .toList();
         assertIterableEquals(Arrays.asList(products), response);
     }
 
